Issue #215: higher contrast for label

--- a/themes/dimpact/scss/style.scss
+++ b/themes/dimpact/scss/style.scss
@@ -459,6 +459,7 @@ div.workbench-info-block {
 #cc-modal.cc-light #cc-modal-wrapper {
   h2 span,
   li span,
+  li strong,
   p.cc-subtitle {
     // higher contrast
     color: $text-color;
